--- a/.gitignore
+++ b/.gitignore
@@ -180,4 +180,4 @@ dmypy.json
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/vscode,macos,python
-mysettings.py
+my_settings.py
