--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
+__pycache__/
+
+db.sqlite3
+db.sqlite3-journal
+media 
+*.csv
 my_settings.py
+
 # Created by https://www.toptal.com/developers/gitignore/api/vscode,macos,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=vscode,macos,python
 
