--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ db.sqlite3
 db.sqlite3-journal
 media 
 *.csv
-my_settings.py
-readme.md
+my_settings
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/vscode,macos,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=vscode,macos,python
