--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 __pycache__/
-
 db.sqlite3
 db.sqlite3-journal
 media 
 *.csv
-my_settings
+my_settings.py
+
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/vscode,macos,python
